# zun-ui

./: .gitignore  .gitreview  .zuul.yaml  README.rst  _0330_cloud_shell_settings.py.sample  lower-constraints.txt  manage.py  package.json  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: api.rst  index.rst
doc/source/install/: index.rst
doc/source/releases/: 0.1.0.rst
releasenotes/notes/: bug-1763250-5035b39df953d25d.yaml  drop-py-2-7-e15513672c769acb.yaml  manage-security-groups-c17e4a0febe6dd4c.yaml  pike-322fc171cfab0443.yaml  queens-1a10c0660636d2e0.yaml  rocky-62e140c8a5971922.yaml  stein-0b3ffcd0aba9eb45.yaml
releasenotes/source/: conf.py  index.rst
tools/: install_venv.py
zun_ui/: karma.conf.js  version.py
zun_ui/api/: client.py  rest_api.py  zun_rest_api.py  zunclient.py
zun_ui/content/cloud_shell/: views.py
zun_ui/content/container/: __init__.py
zun_ui/enabled/: _0330_cloud_shell.py  _1330_project_container_panelgroup.py  _1331_project_container_containers_panel.py  _1332_project_container_capsules_panel.py  _2330_admin_container_panelgroup.py  _2331_admin_container_images_panel.py  _2332_admin_container_hosts_panel.py  _2333_admin_container_containers_panel.py
zun_ui/static/cloud-shell/: cloud-shell.controller.js  cloud-shell.html  cloud-shell.module.js  (+3 more)
zun_ui/templates/: console.html
zun_ui/test/: settings.py
(+149 files in other folders)
